# grex

./: .env.example  .env.release.local.example  .gitignore  .oxlintrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  KEYBINDINGS.md  LICENSE  NIX_SETUP.md  NOTICE  README.md  REMOTE.md  biome.json  codewit.json  flake.nix  grex.json  i18next-parser.config.js  index.html  package.json  playwright.config.ts  tsconfig.json  turbo.json  vite.config.ts
.claude/: launch.json
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: debug_historical.rs  debug_stream_replay.rs  gen_pipeline_fixture.rs  gen_pipeline_fixture_from_stream.rs
src-tauri/icons/: icon.icns
src-tauri/src/: agents.rs  codex_config.rs  data_dir.rs  global_hotkey.rs  image_store.rs  import.rs  lib.rs  logging.rs  main.rs  media_keys.rs  quick_panel.rs  schema.rs  service.rs  shell_env.rs  sidecar.rs  system_limits.rs  terminal.rs  testkit.rs
src-tauri/src/agents/: builtin_claude_providers.rs  catalog.rs  claude_project_files.rs  codex_custom_providers.rs  custom_providers.rs  kimi_config.rs  opencode_config.rs  persistence.rs  provider_capabilities.rs  queries.rs  session_plan.rs  system_prompt.rs
src-tauri/src/automations/: dispatch.rs  mod.rs  ops.rs  schedule.rs  scheduler.rs
src-tauri/src/cli/: args.rs  automation.rs  conductor.rs  data.rs  files.rs  github.rs  mod.rs  output.rs  repo.rs  scripts.rs  send.rs  session.rs  settings.rs  system.rs  terminal_hook.rs  workspace.rs
src-tauri/src/commands/: automation_commands.rs  companion_commands.rs  editor_commands.rs  editors.rs  featurebase_commands.rs  feedback_commands.rs  forge_commands.rs  forgejo_commands.rs  jira_commands.rs  kimi_config_commands.rs  library_commands.rs  linear_commands.rs  local_llm_commands.rs  mod.rs  opencode_config_commands.rs  plain_commands.rs  provider_commands.rs  repository_commands.rs  script_commands.rs  session_commands.rs  slack_commands.rs  system_commands.rs  terminal_commands.rs  trello_commands.rs  triage_commands.rs  triage_lark_cli_commands.rs  workspace_commands.rs
src-tauri/src/companion/: auth.rs  mod.rs  registry.rs  rpc.rs  server.rs  stable_url.rs  stream.rs  tunnel.rs
src-tauri/src/downloads/: hf.rs  mod.rs  registry.rs  types.rs  worker.rs
src-tauri/src/feedback/: github_rest.rs  mod.rs
src-tauri/src/forge/: accounts.rs  branch.rs  bundled.rs  cli_status.rs  command.rs  detect.rs  inbox.rs  mod.rs  provider.rs  types.rs
src-tauri/src/git/: mod.rs  ops.rs  trash.rs  watcher.rs
src-tauri/src/issues/: connection.rs  credentials.rs  feed.rs  mod.rs  provider.rs  registry.rs  types.rs
src-tauri/src/lark/: cli.rs  contact.rs  im.rs  mod.rs
src-tauri/src/linear/: api.rs  connection.rs  credentials.rs  mod.rs  types.rs
src-tauri/src/local_llm/: asset_provider.rs  catalog.rs  chat.rs  context.rs  gguf.rs  hardware.rs  manager.rs  mod.rs  server.rs  settings.rs  text.rs
src-tauri/src/maintenance/: mod.rs  paste_cache.rs
src-tauri/src/mcp/: catalog.rs  mod.rs
src-tauri/src/models/: automations.rs  db.rs  library_mcp.rs  library_prompts.rs  mod.rs  paired_devices.rs  repos.rs  sessions.rs  slack_workspaces.rs  workspaces.rs
src-tauri/src/pipeline/: collapse.rs  event_filter.rs  mod.rs  types.rs  user_question.rs
src-tauri/src/platform/: cli_install.rs  executable.rs  fs.rs  ipc.rs  mod.rs  paths.rs  process.rs  pty.rs  shell.rs
src-tauri/src/rate_limits/: codex.rs  mod.rs
src-tauri/src/sidecar_host/: mod.rs  protocol.rs
src-tauri/src/slack/: agent_context.rs  api.rs  credentials.rs  desktop_scrape.rs  detail.rs  files.rs  inbox.rs  mod.rs  relevance.rs  types.rs
src-tauri/src/triage/: active_status.rs  attachments.rs  config.rs  mod.rs  priming.rs  reaper.rs  scheduler.rs  source_health.rs  workspace_factory.rs
src-tauri/src/ui_sync/: events.rs  socket.rs
src-tauri/src/updater/: config.rs  service.rs  tests.rs
src-tauri/src/workspace/: agent_contexts.rs  archive.rs  branching.rs  helpers.rs  lifecycle.rs  mod.rs  port_allocation.rs  runtime_registry.rs  scripts.rs  sidebar_order.rs  state.rs  workspaces.rs
src-tauri/tests/: agent_stream_event_wire.rs  companion_dispatch_coverage.rs  companion_http.rs  pipeline_fixtures.rs  pipeline_scenarios.rs  pipeline_streams.rs  schema_migrations.rs  stable_part_ids.rs  stream_bridge_elicitation.rs  stream_bridge_events.rs  streaming_send_params.rs
src-tauri/tests/common/: builders.rs  fixtures.rs  mod.rs  normalize.rs
src-tauri/tests/snapshots/: agent_stream_event_wire__wire_format_aborted.snap  agent_stream_event_wire__wire_format_done.snap  agent_stream_event_wire__wire_format_user_input_request_ask_user_question.snap  agent_stream_event_wire__wire_format_user_input_request_form.snap  agent_stream_event_wire__wire_format_user_input_request_url.snap  pipeline_scenarios__asst_unknown_error_prefers_message_text.snap  pipeline_scenarios__auq_claude_answered_uses_structured_tool_use_result.snap  pipeline_scenarios__auq_claude_answers_parsed_from_result_text.snap  pipeline_scenarios__auq_claude_decline_marks_declined.snap  pipeline_scenarios__auq_claude_open_question_stays_pending.snap  pipeline_scenarios__auq_claude_split_rows_still_merge_answers.snap  pipeline_scenarios__codex_image_generation_renders_as_image.snap  pipeline_scenarios__codex_image_generation_saved_path_renders_as_file_image.snap  pipeline_scenarios__collapse_group_stays_before_later_reasoning.snap  pipeline_scenarios__kimi_plan_snapshots_collapse_to_latest.snap  pipeline_scenarios__opencode_reasoning_carries_thought_duration.snap  pipeline_scenarios__opencode_running_tool_renders_output.snap  pipeline_scenarios__opencode_session_error_notice_round_trips.snap  pipeline_scenarios__opencode_turn_renders_text_and_duration_footer.snap  pipeline_scenarios__opencode_write_tool_renders_unified_diff.snap  pipeline_scenarios__stream_codex_user_question_event_persists_card.snap  pipeline_scenarios__stream_empty_text_blocks_emit_no_placeholder.snap  pipeline_scenarios__stream_omitted_thinking_shows_thinking_chip.snap  (+47 more)
(+1420 files in other folders)
