[package]
name = "grex"
version = "0.9.2"
description = "The local-first IDE for coding agent orchestration."
authors = ["Caspian Zhao", "Nathan Lian"]
edition = "2021"
default-run = "grex"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "grex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
dotenvy = "0.15"
tauri-build = { version = "2", features = [] }

[dependencies]
aes = "0.8"
anyhow = "1"
# Canonicalize without Windows `\\?\` verbatim prefixes so repo identity /
# dedup keys stay consistent between store and lookup. On Unix this is a thin
# wrapper around `std::fs::canonicalize`, so output is unchanged there.
dunce = "1"
# Mobile-companion HTTP surface: a localhost-bound axum server that mirrors
# the Tauri IPC commands over HTTP/SSE so the same responsive frontend can be
# served to a phone browser. See `src/companion/`.
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["time"] }
futures = "0.3"
base64 = "0.22.1"
cbc = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
hmac = "0.12"
pbkdf2 = { version = "0.12", default-features = false }
rand = "0.10.0"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
    "stream",
] }
rusty-leveldb = "3"
sha1 = "0.10"
# `wreq` (and the `wreq-util` companion) is a hard fork of `reqwest`
# with built-in browser TLS / HTTP-2 fingerprint emulation. We use it
# only for Slack: stock reqwest's rustls ClientHello bytes do not
# match any real browser, and Slack's Cloudflare-fronted edge
# classifies them as "spoofed_user_agent" / "unexpected_scraping" and
# replies `invalid_auth` BEFORE inspecting the token. See
# `korotovsky/slack-mcp-server#86`.
wreq = { version = "5", default-features = false, features = ["json"] }
wreq-util = "2"
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# CST editing of the user's global opencode config (preserve comments/format)
# + serde read path. See agents/opencode_config.rs.
jsonc-parser = { version = "0.32", features = ["cst", "serde"] }
sha2 = "0.10"
hex = "0.4"
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "test", "devtools"] }
tempfile = "3"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-mcp-bridge = "0.11.0"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "net",
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
] }
notify = "7"
notify-debouncer-full = "0.4"
# Cross-platform PTY (openpty on Unix, ConPTY on Windows) for the embedded
# terminal and interactive run-action scripts. See `workspace/scripts.rs`.
portable-pty = "0.8"
toml = "0.8"
# CST editing of the user's `~/.kimi-code/config.toml` (preserve comments /
# formatting on write). See agents/kimi_config.rs.
toml_edit = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "json",
    "env-filter",
    "chrono",
] }
url = "2"
uuid = { version = "1", features = ["v4"] }

# libc backs Unix process groups, signals, and resource limits. Windows uses
# the `windows` crate equivalents (Job Objects, DPAPI, sysinfo) — see
# `src/platform/`. Each is gated to its target so neither pulls the other in.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
security-framework = "3"
security-framework-sys = "2"
# Media-key passthrough (src/media_keys.rs): NSEvent local monitor.
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSEvent", "NSResponder", "block2"] }
block2 = "0.6"

[target.'cfg(windows)'.dependencies]
uds_windows = "1"
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_System_Console",
    "Win32_System_SystemInformation",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging",
] }

[[bin]]
name = "grex-cli"
path = "src/bin/grex-cli.rs"

# gen_pipeline_fixture{,_from_stream} are dev-only fixture-capture tools and
# live in examples/ (NOT [[bin]]) on purpose: Tauri's bundler copies every
# [[bin]] of this crate into the .app, so any bin here would ship. examples are
# built only on demand (`cargo run --example <name> -- …`) and never bundled.

[dev-dependencies]
anyhow = "1"
futures = "0.3"
insta = { version = "1", features = ["yaml", "glob"] }
tempfile = "3"

# ---------------------------------------------------------------------------
# Dev profile: optimised for fastest compilation, not runtime performance.
# sccache is the cross-worktree cache; incremental is disabled because the
# two are mutually exclusive.
# ---------------------------------------------------------------------------
[profile.dev]
debug = "line-tables-only"   # keep backtraces, skip 80% of debug info
split-debuginfo = "unpacked" # skip dsymutil merge (macOS default, explicit)
opt-level = 0
codegen-units = 256          # max intra-crate parallelism
incremental = false          # required for sccache compatibility

[profile.dev.package."*"]
debug = false       # deps don't need debug info at all
opt-level = 0
codegen-units = 256

# boring-sys2 vendors and compiles BoringSSL (C/C++) via cmake. cmake-rs picks
# the CMake build type from OPT_LEVEL: at 0 it builds Debug, which on MSVC uses
# the debug CRT (/MDd) and pulls iterator-debug symbols like `__imp__CrtDbgReport`.
# Rust's *-windows-msvc target always links the release CRT (msvcrt), so a debug
# BoringSSL fails to link (LNK2019). Bumping opt-level off 0 makes cmake build a
# Release-type BoringSSL (/MD), matching Rust's CRT. Only affects the C/C++ glue.
[profile.dev.package.boring-sys2]
opt-level = 1

[profile.dev.build-override]
debug = false       # build scripts & proc-macros: fastest possible
opt-level = 0
codegen-units = 256
